# KILLDOZER

./: index.html  package.json  pnpm-lock.yaml
.github/workflows/: tauri.yaml  test_pr.yaml
src/: events.ts  gadget.ts  main.ts  resize.ts  shell.ts  styles.css  terminal.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/cheat/: input.ts  output.ts  pencilgon.ts  ui.ts
src/cheat/module/automation/: autologin.ts
src/css/: cheat.css  styles.css
