[package]
name = "killdozer"
version = "0.6.7"
description = "Killdozer"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.8.1"
tokio = { version = "1", features = ["time", "rt"] }
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
chrono = "0.4"
dashmap = "5.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
